<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E7E9EA"
    android:backgroundTint="#DDD7D9"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="681dp"
        android:background="@color/titleBg"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:elegantTextHeight="true"
        android:textColor="@color/colorText"
        android:textFontWeight="@android:integer/config_longAnimTime"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.762" />

    <TextView
        android:id="@+id/labStartDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:text="@string/labStartDate"
        android:textSize="18sp"
        android:textColor="@color/colorText"
        app:layout_constraintStart_toStartOf="@id/textViewTitle"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle" />

    <TextView
        android:id="@+id/textViewStartDate"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:onClick="onStartDateClick"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/textViewTitle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/labStartDate"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <TextView
        android:id="@+id/labLoanAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/labLoanAmount"
        android:textSize="16sp"
        android:textColor="@color/colorText"
        app:layout_constraintEnd_toEndOf="@+id/labStartDate"
        app:layout_constraintTop_toBottomOf="@id/labStartDate" />

    <EditText
        android:id="@+id/editTextLoanAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@color/colorBackground"
        android:inputType="number"
        android:text="@string/defaultLoanAmount"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewTitle"
        app:layout_constraintStart_toEndOf="@+id/labLoanAmount"
        app:layout_constraintTop_toBottomOf="@+id/textViewStartDate" />

    <TextView
        android:id="@+id/labDuration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/labDuration"
        android:textSize="18sp"
        android:textColor="@color/colorText"
        app:layout_constraintEnd_toEndOf="@+id/labLoanAmount"
        app:layout_constraintTop_toBottomOf="@+id/editTextLoanAmount" />

    <Spinner
        android:id="@+id/spinnerDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewTitle"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toEndOf="@+id/labDuration"
        app:layout_constraintTop_toBottomOf="@+id/editTextLoanAmount" />

    <TextView
        android:id="@+id/textViewInterest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/labInterest"
        android:textSize="18sp"
        android:textColor="@color/colorText"
        app:layout_constraintStart_toStartOf="@+id/textViewTitle"
        app:layout_constraintTop_toBottomOf="@+id/labDuration" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/textViewTitle"
        app:layout_constraintStart_toEndOf="@+id/textViewInterest"
        app:layout_constraintTop_toTopOf="@+id/textViewInterest">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:checked="true"
            android:onClick="onRadioButtonClicked"
            android:text="@string/rate1"
            android:textColor="@color/colorText" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/rate2"
            android:textColor="@color/colorText" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/rate3"
            android:textColor="@color/colorText" />
    </RadioGroup>

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="@color/colorCal"
        android:onClick="onCalculateBtnClick"
        android:text="@string/butCal"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewTitle"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textViewTitle"
        app:layout_constraintTop_toBottomOf="@+id/textViewInterest" />

    <TextView
        android:id="@+id/textViewTotalLoan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/colorResult"
        android:text="@string/result1"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewTitle"
        app:layout_constraintStart_toStartOf="@+id/textViewTitle"
        app:layout_constraintTop_toBottomOf="@+id/btnCalculate" />

    <TextView
        android:id="@+id/textViewMonthlyInstall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/colorResult"
        android:text="@string/result2"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewTitle"
        app:layout_constraintStart_toStartOf="@+id/textViewTitle"
        app:layout_constraintTop_toBottomOf="@+id/textViewTotalLoan" />


</androidx.constraintlayout.widget.ConstraintLayout>